tests/NormalTests/paczka1/fuzzy1/55950690.err
Error in line 4: A908 A614 81,3
Error in line 5: A908 S472 74,8
Error in line 11: A908 A614 39,6
Error in line 18: 5TMJTqYyV1 A614 11,6
